src/objects/DOZISF__ZoomInfo_Intent__c.object
<CustomObject>
    <fields>
        <fullName>DOZISF__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ZoomInfo Intent</relationshipLabel>
        <relationshipName>Zoominfo_Intent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOZISF__Categories__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Change_in_Surge_Score__c</fullName>
        <label>Change in Signal Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOZISF__Intent_ID__c</fullName>
        <label>Intent ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__Signal_Date__c</fullName>
        <label>Signal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOZISF__Surge_Score__c</fullName>
        <label>Signal Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOZISF__Topic__c</fullName>
        <label>Topic</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ZoomInfo External Id</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ZoomInfo Intent</label>
    <listViews>
        <fullName>DOZISF__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>DOZISF__Account__c</columns>
        <columns>DOZISF__Topic__c</columns>
        <columns>DOZISF__Categories__c</columns>
        <columns>DOZISF__Surge_Score__c</columns>
        <columns>DOZISF__Change_in_Surge_Score__c</columns>
        <columns>DOZISF__Intent_ID__c</columns>
        <columns>DOZISF__ZoomInfo_External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>ZoomInfo Intent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZoomInfo Intent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>